1. Add logging. 2. Add command for run factory. 3. Add template list for all car. 4. Add validator field.

--- a/config/system/car_detail.yaml
+++ b/config/system/car_detail.yaml
@@ -1,9 +1,9 @@
 engine:
-  prefix: 6B6
+  prefix: '6B6'
   length: 10 # Without prefix
 vin:
-  prefix: 88
+  prefix: '88'
   length: 16 # Without prefix
 chassis:
-  prefix: YYT
+  prefix: 'YYT'
   length: 7 # Without prefix
