Feature: 1. Added phpunit-bridge + write some tests. 2. Added env variables of mysql from docker-compose 3. General fixes.

--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,10 @@
     },
     "require-dev": {
         "symfony/debug-pack": "*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/maker-bundle": "^1.14"
+        "symfony/test-pack": "*"
     },
     "config": {
         "preferred-install": {
