--- a/.env
+++ b/.env
@@ -29,6 +29,5 @@ APP_SECRET=65124bfa20cf041a363df04ff3110da5
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:j82H7H3po@mysql:3306/service
+DATABASE_URL=mysql://user:password@host:3306/dbname
 ###< doctrine/doctrine-bundle ###
-
