--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,10 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        host: '%env(resolve:MYSQL_HOST)%'
+        dbname: '%env(resolve:MYSQL_DATABASE)%'
+        user: '%env(resolve:MYSQL_USER)%'
+        password: '%env(resolve:MYSQL_ROOT_PASSWORD)%'
+        driver: pdo_mysql
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
